.gradle/gradle.log
****************************
 Powered By MCP:             
 http://mcp.ocean-labs.de/   
 Searge, ProfMobius, Fesh0r, 
 R4wk, ZeuX, IngisKahn, bspkrs
 MCP Data version : unknown
****************************
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
/home/blixa/src/OCJS/build/sources/java/com/mrmakeit/ocjs/JavascriptArch.java:3: error: package org.mozilla.javascript does not exist
import org.mozilla.javascript.Context;
                             ^
/home/blixa/src/OCJS/build/sources/java/com/mrmakeit/ocjs/JavascriptArch.java:4: error: package org.mozilla.javascript does not exist
import org.mozilla.javascript.Scriptable;
                             ^
/home/blixa/src/OCJS/build/sources/java/com/mrmakeit/ocjs/JavascriptArch.java:18: error: cannot find symbol
	private Context vm;
	        ^
  symbol:   class Context
  location: class JavascriptArch
/home/blixa/src/OCJS/build/sources/java/com/mrmakeit/ocjs/JavascriptArch.java:35: error: cannot find symbol
		vm = Context.enter();
		     ^
  symbol:   variable Context
  location: class JavascriptArch
/home/blixa/src/OCJS/build/sources/java/com/mrmakeit/ocjs/JavascriptArch.java:36: error: cannot find symbol
		Scriptable scope = vm.initStandardObjects();
		^
  symbol:   class Scriptable
  location: class JavascriptArch
5 errors
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 8.731 secs
